--- a/composer.json
+++ b/composer.json
@@ -2,24 +2,39 @@
   "name": "krustnic/docx-merge",
   "type": "library",
   "description": "Simple library for merging multiple MS Word \".docx\" files into one",
-  "keywords": ["docx","merge","placeholder"],
+  "keywords": [
+    "docx",
+    "merge",
+    "placeholder"
+  ],
   "license": "MIT",
   "authors": [
     {
       "name": "Mityakov Aleksandr",
       "email": "avmityakov@gmail.com"
+    },
+    {
+      "name"    : "Nuno Chaves",
+      "email"   : "nunochaves@sapo.pt",
+      "role"    : "Developer"
+    },
+    {
+      "name": "Nikita Klyosow",
+      "email": "nikitka2904@gmail.com"
     }
   ],
   "minimum-stability": "dev",
-
   "require": {
-    "php": ">=5.3.0"
+    "php": "^7.4",
+    "ext-simplexml": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.*"
   },
   "autoload": {
-    "classmap": ["src/"],  
+    "classmap": [
+      "src/"
+    ],
     "psr-4": {
       "DocxMerge\\": "src/"
     }
