--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,8 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": "^7.4",
+    "php": "^8.0",
     "ext-simplexml": "*"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "4.8.*"
   },
   "autoload": {
     "classmap": [
@@ -38,5 +35,8 @@
     "psr-4": {
       "DocxMerge\\": "src/"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9"
   }
 }
